2007-05-10  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.mdp, BooShell/BooShell.mdp, BooShell/Makefile.am,
	  Makefile.am: Fix build.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.mdp, BooShell/BooShell.mdp, BooShell/Makefile.am,
	  Makefile.am: Reference shared assemblies from the correct location.
	* BooShellPadContent.boo: Fix the build.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OptionPanels/GeneralBooShellPanel.boo,
	  Gui/OptionPanels/GeneralShellPanel.boo,
	  Gui/OptionPanels/CodeCompilationPanel.boo, BooBinding.addin.xml,
	  BooBinding.mdp, BooShellPadContent.boo, BooShell/BooShell.mdp,
	  BooShell/Makefile.am, Makefile.am: Migration to Mono.Addins.

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.mdp, BooShell/BooShell.mdp: Don't copy referenced
	  assemblies.

2007-02-27  Lluis Sanchez Gual <lluis@novell.com> 

	* FormattingStrategy/BooFormattingStrategy.boo: Track api changes.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.addin.xml: Change add-in versions to 0.13.
	* BooShell/Makefile.am: Flush.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.mdp, BooShell/BooShell.mdp, BooShell/Makefile.am,
	  Makefile.am: Synchronized the MD project and the Makefile
	* BooBinding.mds: Updated.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/BooTextEditorExtension.boo: Handle code completion only for boo
	  files.

2007-02-09  Peter Johanson  <latexer@gentoo.org>

	* BooBinding.addin.xml:
	* Gui/BooTextEditorExtension.boo:
	* Makefile.am:

	Add new BooTextEditorExtension to start supporting minimal completion
	again.

	* Parser/BooParser.boo:
	* Parser/Resolver.boo:

	Beginnings of an implementation of IsAsResolve, needs finishing at
	some point.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/ShellTextView.boo: Temporarily disabled code completion in the
	  shell. Some changes are needed to use the new api.