@@ -73,14 +73,12 @@
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <ProjectReference type="Assembly" localcopy="False" refto="../../contrib/Mono.Addins.dll" />
-    <ProjectReference type="Assembly" localcopy="False" refto="../../contrib/Mono.Addins.Setup.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../../build/AddIns/MonoDevelop.Core.Gui.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../../build/bin/MonoDevelop.Core.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../../build/AddIns/MonoDevelop.Components.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../../build/AddIns/MonoDevelop.Projects.Gui.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../../build/AddIns/MonoDevelop.SourceEditor.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../../build/AddIns/MonoDevelop.Projects.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../../build/AddIns/MonoDevelop.Ide.dll" />
+    <ProjectReference type="Gac" localcopy="True" refto="Boo.Lang, Version=1.0.0.0, Culture=neutral, PublicKeyToken=32c39770e9a21a67" />
+    <ProjectReference type="Gac" localcopy="True" refto="Boo.Lang.Useful, Version=1.0.0.0, Culture=neutral, PublicKeyToken=32c39770e9a21a67" />
+    <ProjectReference type="Gac" localcopy="True" refto="Boo.Lang.CodeDom, Version=1.0.0.0, Culture=neutral, PublicKeyToken=32c39770e9a21a67" />
+    <ProjectReference type="Gac" localcopy="True" refto="Boo.Lang.Compiler, Version=1.0.0.0, Culture=neutral, PublicKeyToken=32c39770e9a21a67" />
+    <ProjectReference type="Gac" localcopy="True" refto="Boo.Lang.Parser, Version=1.0.0.0, Culture=neutral, PublicKeyToken=32c39770e9a21a67" />
+    <ProjectReference type="Gac" localcopy="True" refto="Boo.Lang.Interpreter, Version=1.0.0.0, Culture=neutral, PublicKeyToken=32c39770e9a21a67" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../">
     <BuildFilesVar Sync="True" Name="FILES" />
