@@ -4,9 +4,8 @@ REFS =  \
 	$(BOO_LIBS) \
 	$(GLIB_SHARP_LIBS) \
 	$(GTK_SHARP_LIBS) \
-	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Core.Gui.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Core.dll \
-	-r:$(top_srcdir)/contrib/Mono.Addins.dll
+	-r:$(top_builddir)/build/AddIns/MonoDevelop.Core.Gui.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll
 
 RES =                                                         
  
